--- a/app/assets/stylesheets/components/_booking_form.scss
+++ b/app/assets/stylesheets/components/_booking_form.scss
@@ -10,7 +10,7 @@
   border-color: black;
   box-shadow: 2px;
   padding: 18px;
-  background-color: #ff9f45;
+  background-color: $orange;
 
 }
 .form-label {
