--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -91,8 +91,8 @@
 
 .cards-container-homepage {
 display: flex;
-padding-top: 32px;
-margin-bottom: 20px;
+padding: 20px;
+margin-top: 24px;
 }
 
 .cards-home {
