--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -45,7 +45,7 @@ margin-bottom: 32px;
   border-color: black;
   box-shadow: 2px;
   padding: 18px;
-  background-color: #ff9f45;
+  background-color: $orange;
 }
 .back-button {
   color: white;
