--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-  <h2 class='section-headline'>Cutest capybaras from your area:</h2>
+  <h2 class='section-headline'>Check out our cutest capybaras:</h2>
 
 <div class="cards-container-homepage">
 
