--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -4,7 +4,8 @@
 $red: #FD1015;
 $blue: #0D6EFD;
 $yellow: #FFC65A;
-$orange: #E67E22;
+$orange: #ff9f45;
 $green: #1EDD88;
 $gray: #0E0000;
+$brown: #99714d;
 $light-gray: #F4F4F4;
