--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,7 +5,7 @@
 
 // Body
 body {
-  background-color: #FF9F45;
+  background-color: $orange;
   font-family: 'Montserrat';
 }
 
@@ -38,30 +38,41 @@ body {
 
 .btn-lg {
   color: white;
+  transition: 0.5s;
+}
+
+.btn-lg:hover {
+  transform: scale(1.1);
+  color: $white;
+  border: 2px solid $white;
 }
 
 //Section headline
 .section-headline {
   display: flex;
-  font-size: 24px;
+  font-size: 18px;
+  height: fit-content;
   color: white;
   justify-content: center;
   font-weight: lighter;
   font-family: 'Montserrat';
   padding: 24px;
-  background-color: black;
-  opacity: 0.4;
-  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+  background: rgb(153,113,77);
+  background: radial-gradient(circle, rgba(153,113,77,1) 0%, rgba(101,75,52,1) 100%);
 }
 
-// .cards-home {
-//   margin-top: 24px;
-// }
+/* -------------------MEDIA QUERIES-----------------------*/
 
-// .cards-container-homepage h2 {
-//  margin-bottom: 20px;
-// }
+/* MEDIUM DEVICE*/
+@media screen and (max-width: 1024px) {
 
-// .cards img {
-//   margin-top: 24px;
-// }
+
+}
+
+/* SMALL DEVICE*/
+@media screen and (max-width: 600px) {
+  .cards-home {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+}
