--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -20,9 +20,9 @@
 .links {
   a {
     font-size: 16px;
-    color: white;
+    color: $white;
     // font-weight: lighter;
-    font-family: 'Montserrat';
+    font-family: $body-font;
     text-decoration: none;
     margin: 0 8px;
     padding: 1rem;
