--- a/app/assets/stylesheets/components/_style_searchbar.scss
+++ b/app/assets/stylesheets/components/_style_searchbar.scss
@@ -3,7 +3,7 @@
     background-color: var(--search-box-bg, white);
     border: none;
     padding: 6px;
-    border-radius: 5px;
+    border-radius: $border-radius;
     color: var(--search-box-text);
     font-family: inherit;
     font-size: inherit;
