--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -18,12 +18,9 @@ $danger:     $red;
 $warning:    $orange;
 
 // Buttons & inputs' radius
-$border-radius:    2px;
-$border-radius-lg: 2px;
-$border-radius-sm: 2px;
+$border-radius:    0.5rem;
+$border-radius-lg: 0.5rem;
+$border-radius-sm: 0.5rem;
 
 // Override other variables below!
-// a {
-//   text-decoration: none !important;
-//   color: white !important;
-// }
+
