--- a/app/assets/stylesheets/pages/_booking-index.scss
+++ b/app/assets/stylesheets/pages/_booking-index.scss
@@ -13,7 +13,7 @@
    gap: 1rem;
    margin-bottom: 1rem;
    width: 100%;
-   border-radius: 2rem;
+   border-radius: $border-radius;
    font-weight: 500;
 }
 
@@ -24,9 +24,9 @@
   align-items: center;
   padding: 1rem;
   margin: 1rem;
-  background: whitesmoke;
+  background: $white;
   border: 1px solid transparent;
-  border-radius: 20px;
+  border-radius: $border-radius;
   box-shadow: 10px 10px 10px rgba(0,0,0,0.2);
   position: relative;
 }
@@ -35,7 +35,7 @@
 position: absolute;
 top: -1rem;
 left: -1rem;
-background-color: whitesmoke;
+background-color: $white;
 border-radius: 50%;
 padding: 0.5rem;
 }
