--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,7 +6,6 @@
 // Body
 body {
   background-color: $orange;
-  font-family: 'Montserrat';
 }
 
 //Banner design:
@@ -19,16 +18,15 @@ body {
 
 .banner h1 {
   margin: 0;
-  color: white;
+  color: $white;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   font-size: 48px;
   font-weight: bold;
-  font-family: 'Montserrat';
 }
 
 .banner p {
   font-size: 36px;
-  color: white;
+  color: $white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
@@ -37,7 +35,7 @@ body {
 }
 
 .btn-lg {
-  color: white;
+  color: $white;
   transition: 0.5s;
 }
 
@@ -50,13 +48,12 @@ body {
 //Section headline
 .section-headline {
   display: flex;
-  font-size: 18px;
   height: fit-content;
-  color: white;
+  color: $white;
   justify-content: center;
   font-weight: lighter;
-  font-family: 'Montserrat';
-  padding: 24px;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
   background: rgb(153,113,77);
   background: radial-gradient(circle, rgba(153,113,77,1) 0%, rgba(101,75,52,1) 100%);
 }
