--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -3,37 +3,10 @@
 @import "show";
 @import "booking-index";
 
-// Navbar design
-//page design
-body {
-  background-color: $orange;
-  font-family: 'Montserrat';
-  margin: 0;
-}
-
-h1 {
-margin: 0;
-color: white;
-text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-font-size: 30px;
-font-weight: bold;
-font-family: 'Montserrat'
-}
-
-.headline-index {
-  display: flex;
-  font-size: 24px;
-  color: white;
-  justify-content: left;
-  font-weight: lighter;
-  font-family: 'Montserrat';
-  padding: 18px;
-  background-color: black;
-  opacity: 0.4;
-  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
-}
-
 .cards-container {
   display: flex;
   padding-top: 32px;
+}
+body {
+  color: $black;
 }
