--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -4,16 +4,16 @@
   <% @bookings.each do |booking| %>
     <div class="booking">
       <div class="booking-header">
-        <img src="assets/termin.png" alt="booking icon" width="70" height="70" class="corner-icon">
+        <img src="assets/tick.svg" alt="booking icon" width="70" height="70" class="corner-icon">
         <%= link_to capybara_path(booking.capybara), class: "capybara-link capybara-icons" do %>
           <%= cl_image_tag booking.capybara.photo.key %>
         <% end %>
 
-        <h5><%=booking.capybara.name%></h5>
+        <h4><%=booking.capybara.name%></h4>
       </div>
 
-      <p>Date: <%=booking.date%></p>
-      <p>Price: <%=booking.capybara.price%>€</p>
+      <p>📆 <%=booking.date.strftime("%d %B %Y")%></p>
+      <p>💰 <%=booking.capybara.price%>€</p>
 
     </div>
   <% end %>
